BugFix Error with to long names for Excel sheet BugFix ProgressHandler running after error BugFix Wrong name for calendarfactor sheet (A6A7)
Code restructuring and clean up

--- a/src/main/resources/de/bundesbank/jdemetra/exceladapter/options/Bundle.properties
+++ b/src/main/resources/de/bundesbank/jdemetra/exceladapter/options/Bundle.properties
@@ -1,4 +1,4 @@
-ExcelAdapterPanel.a6.text=A6
+ExcelAdapterPanel.a6.text=A6/A7
 ExcelAdapterPanel.d10.text=D10
 ExcelAdapterPanel.d11.text=D11
 ExcelAdapterPanel.d12.text=D12
