--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,25 @@
     </build>
     <repositories>
         <repository>
-            <id>netbeans</id>
-            <name>Repository hosting NetBeans modules</name>
+            <id>netbeans-releases</id>
+            <name>NetBeans</name>
             <url>http://bits.netbeans.org/nexus/content/groups/netbeans</url>
             <snapshots>
                 <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>oss-jfrog-artifactory-releases</id>
+            <url>https://oss.jfrog.org/artifactory/oss-release-local</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>oss-jfrog-artifactory-snapshots</id>
+            <url>https://oss.jfrog.org/artifactory/oss-snapshot-local</url>
+            <snapshots>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
@@ -53,7 +67,7 @@
         <dependency>
             <groupId>de.bbk</groupId>
             <artifactId>ConCur</artifactId>
-            <version>1.0.8</version>
+            <version>1.0.10</version>
         </dependency>
 
         <!--JDemetra+ Modules > -->
